--- a/nginx.conf
+++ b/nginx.conf
@@ -3,25 +3,18 @@ server {
     server_name _;
 
     root /var/www/public;
-    index index.php index.html;
+    index index.php;
 
-    # Handle requests
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # PHP-FPM
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass unix:/var/run/php/php-fpm.sock;
-        fastcgi_index index.php;
-
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    # Block access to hidden files
     location ~ /\.(?!well-known).* {
         deny all;
     }
